--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/img/amitie.jpg">
+    <link rel="icon" href="/img/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
-    <title>AMITIE</title>
+    <title>Rental PS</title>
 
      <!-- Custom fonts for this template -->
      <link href="/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
